[gd_scene load_steps=2 format=3 uid="uid://hud_scene_id"]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Panel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "06:00"
horizontal_alignment = 1

[node name="DateLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Spring 1, Year 1"
horizontal_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
